# pytorch-playground

./: .gitignore  0010_tensors.py  README.md  main.py  mnist.py  pyproject.toml
