[project]
name = "pytorch-playground"
version = "0.1.0"
description = "PyTorch playground"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
# uv sync --group torch-std
torch-std = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

# uv sync --group torch-xpu
torch-xpu = [
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "xpu"
url = "https://download.pytorch.org/whl/xpu"

[tool.uv.sources]
torch = [
    { group = "torch-xpu", index = "xpu" }
]
